api response by openapi type
